atualizando alguns detalhes e arrumando bug em iphones

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="assets/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Quality Films</title>
+    <title>Quality Film's</title>
 </head>
 <body>
     <div class="line--header"></div>
@@ -48,7 +48,7 @@
                 <div class="bar"></div>
                 <h2>Empresa</h2>
                 <div class="area1--text">
-                    Empresa especializada em películas de segurança automotiva, tradição e experiência desde 2006.
+                    Empresa de Curitiba, especializada em películas de segurança automotiva, tradição e experiência desde 2006.
                 </div>
             </div>
             <div class="area1--img1"></div>
@@ -123,7 +123,7 @@
     <section class="container area--services">
         <div class="services--body">
             <div class="bar white"></div>
-            <h1>Por que escolher a Quality Films?</h1>
+            <h1>Por que escolher a Quality Film's?</h1>
             <div class="services--content line">
                 <div class="service">
                     <img src="assets/images/garantido.png">
